# bestlyg

./: .bestlyg-webhook.js.swp  .commitlintrc.js  .cz-config.js  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .gitmodules.temp  .npmrc  .oxfmtignore  .oxfmtrc.json  .oxlintrc.json  .pnpmfile.cjs  .prettierignore  .prettierrc.js  .ssh.sh  .umirc.ts  LICENSE  README.md  bestlyg-webhook.js  deploy.sh  deploy.site.sh  docker-compose.yml  jest.config.js  lerna.json  log  nginx.conf  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  rollup.config.js  tsconfig.base.json  tsconfig.json  typings.d.ts  utils.js
.changeset/: config.json  three-lizards-share.md  three-mangos-poke.md
docs/: index.md
docs/数据结构/: 基础类.md  链表.md  队列.md
haizeix/: .vimrc  contest.h  run.sh
haizeix/c++/: bench.cpp  bench.h  bestlyg.h  function.cpp  main.cpp  rbtree.cpp  run.sh  template.cpp  thread.cpp
haizeix/linux-program/: ls.c
haizeix/oj/: 100. 计算复利.c  101. 计算各位和.c  102. 注水问题.c  103.cpp  104.c  107. 七的奇倍数.c  108. 求面积的问题.c  109. 四位数中有偶数位么.c  111. 乘车费用.c  113. 一个月有多少天.c  114.cpp  115.c  116.c  117.c  118. 生肖.c  119. 昨天和明天.c  120.c  121. 石头剪刀布.c  122.c  123. 线段包含.cpp  125. 考试结束时间.c  126.cpp  127.c  128.cpp  130.cpp  131. n个数的极差.c  133. 输出乘法表.c  135. X天后的日期.cpp  136.c  137. 字母三角形.cpp  138. 输出A字三角形.cpp  139. 输出A字菱形.cpp  140.cpp  141.cpp  142.c  143. 数字游戏.cpp  144. 字符串中A的数量.cpp  145.c  146. 字符串.cpp  148.cpp  (+198 more)
haizeix/scripts/: oj.js
projects/mobile/: .eslintrc.js  .prettierrc.js  package.json  project.config.json  project.tt.json  typings.d.ts
projects/server/: .eslintrc.js  README.md  app.js  http.rest  package.json  tsconfig.json
python/server/: .gitignore  Pipfile  ecosystem.config.js  gunicorn.config.py  main.py  run.sh  supervisor.conf
rust/: Cargo.toml
rust/scripts/: create-scripts.sh
rust/src/: main.rs
scripts/: .ssh.sh  auto.ts  batchLeetCode.ts  build-blog.ts  build.ts  createLeetCodeMarkdown.ts  createLeetCodeReadme.ts  deploy.mjs  deploy.sh  deploy.ts  env.js  env.ts  format-affect.mjs  git-proxy.mjs  init.mjs  init.sh  leetCodeMarkdown.ts  logo.mjs  main.mjs  python-init.sh  release.mjs  script.js  script.ts  site-build.mjs  site.sh  ssh.mjs  start-script.mjs  submodule.mjs  submodule.sh  tsconfig.json  updateApplicationsCoreCodeMarkdown.ts  updateCoreCode.ts  version.ts
scripts/c/: Makefile  main.c  stack.c  stack.h  unionfind.c  unionfind.h  utils.c  utils.h
scripts/leetcode/: batchLeetCode.ts  createLeetCodeMarkdown.ts  createLeetCodeReadme.ts  env.js  env.ts  leetCodeMarkdown.ts  leetcode.ts  script.js  script.ts
scripts/site/: build.mjs  deploy.mjs  send.mjs  unzip.mjs  zip.mjs
scripts/utils/: constants.ts  dep.ts  fn.ts  index.ts  leetcode.ts  markdown.ts  obj.ts  reg.ts  shell.ts  specStr.ts
shell/wsl/: init.sh
static/: .vimrc  contest.h  navicat_reset.sh  信息系统项目管理师.md
static/guess-beads/: index.html  main.08f7941b70128b7d8f86.js  main.15290d9bcc2df2dd0c73.js  main.17aea9a57fdcefed8ee9.js  main.17aea9a57fdcefed8ee9.js.LICENSE.txt  main.30d9cc53dcd4f89c1a80.js  main.3fdb0e2ca9b72d5906cc.js  main.dc9c000b28926ced0ae7.js
static/web/: 27174.fd3f8f58.async.js  27301.bb179fff.async.js  404.html  60411.0155dbe7.async.js  89730.5991909b.async.js  dumi_demos.29ae80ca.async.js  packages__docs__index.md.d5d6a267.async.js  packages__作品集__UI.md.165b5a10.async.js  packages__力扣题解__1-100__1.两数之和.md.12abd5ae.async.js  packages__力扣题解__1-100__10.正则表达式匹配.md.d36cee37.async.js  packages__力扣题解__1-100__100.相同的树.md.43a03f1e.async.js  packages__力扣题解__1-100__11.盛最多水的容器.md.f368dffe.async.js  packages__力扣题解__1-100__12.整数转罗马数字.md.5818afc1.async.js  packages__力扣题解__1-100__13.罗马数字转整数.md.ab232354.async.js  packages__力扣题解__1-100__14.最长公共前缀.md.eeefeb95.async.js  (+1064 more)
typings/: styles.d.ts
web3/bestlyg-gear-academy/: .gitignore  Cargo.toml
web3/bestlyg-gear-academy/.github/workflows/: ci.yml
web3/bestlyg-gear-academy/pebbles-game/: Cargo.toml  build.rs  homework.txt
web3/bestlyg-gear-academy/pebbles-game-io/: Cargo.toml
web3/bestlyg-gear-academy/pebbles-game-io/src/: lib.rs
web3/bestlyg-gear-academy/pebbles-game/src/: lib.rs
web3/bestlyg-gear-academy/wordle-game/: Cargo.toml  build.rs
web3/bestlyg-gear-academy/wordle-game-io/: Cargo.toml
web3/bestlyg-gear-academy/wordle-game-io/src/: lib.rs
web3/bestlyg-gear-academy/wordle-game-session/: Cargo.toml  build.rs
web3/bestlyg-gear-academy/wordle-game-session-io/: Cargo.toml
web3/bestlyg-gear-academy/wordle-game-session-io/src/: lib.rs
web3/bestlyg-gear-academy/wordle-game-session/src/: lib.rs
web3/bestlyg-gear-academy/wordle-game-session/tests/: tests.rs
web3/bestlyg-gear-academy/wordle-game/src/: lib.rs
web3/niuniu/: README.md  (+2 more)
web3/niuniu/contract/: Cargo.toml  deploy.sh  update.sh
web3/niuniu/contract/neardev/: dev-account.env
web3/niuniu/contract/src/: account.rs  lib.rs  poker.rs  room.rs  shared.rs  update.rs
web3/substrate-node-template/ink/erc20/: Cargo.toml  lib.rs  output.rs
web3/substrate-node-template/ink/erc20/trait_erc20/: Cargo.toml  lib.rs
web3/substrate-node-template/pallets/kitties/: Cargo.toml
web3/substrate-node-template/pallets/kitties/src/: lib.rs  mock.rs  tests.rs
web3/substrate-node-template/pallets/kitties/src/migrations/: v1.rs  v2.rs
web3/substrate-node-template/pallets/ocw/: Cargo.toml
web3/substrate-node-template/pallets/ocw/src/: lib.rs
web3/substrate-node-template/pallets/poe/: Cargo.toml
web3/substrate-node-template/pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
web3/substrate-node-template/primitives/: Cargo.toml
web3/substrate-training/: Cargo.toml  address.json
web3/substrate-training/examples/2023-8-18/: main.rs
web3/substrate-training/examples/2023-8-25/: main.rs
web3/substrate-training/examples/2023-8-26/: main.rs
web3/substrate-training/examples/2023-8-27/: main.rs
web3/substrate-training/examples/2023-8-7/: main.rs
web3/substrate-training/examples/server/: main.rs
web3/substrate-training/examples/server/controllers/: address.rs  home.rs
web3/substrate-training/src/: main.rs
(+344 files in other folders)
