[workspace.package]
authors = ["Gear Foundation <hello@gear.foundation>"]
edition = "2021"
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
license = "MIT"
publish = false
version = "0.1.0"

[workspace]
members = ["pebbles-game", "pebbles-game-io", "wordle-game", "wordle-game-io", "wordle-game-session", "wordle-game-session-io"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
gclient = "1.4.2"
gear-wasm-builder = "1.4.2"
gmeta = "1.4.2"
gstd = "1.4.2"
gtest = "1.4.2"
tokio = "1"
xshell = "0.2"

pebbles-game = {path = "./pebbles-game"}
pebbles-game-io = {path = "./pebbles-game-io"}
wordle-game = {path = "./wordle-game"}
wordle-game-io = {path = "./wordle-game-io"}
wordle-game-session = {path = "./wordle-game-session"}
wordle-game-session-io = {path = "./wordle-game-session-io"}

parity-scale-codec = {version = "3", default-features = false}
scale-info = {version = "2", default-features = false}
