[package]
edition = "2021"
name = "substrate-training"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
sp-core = "2.0.0"
sp-runtime = "2.0.0"
passwords = "3.1.3"
#bip39 = "1.0.0-rc1"
bip39 = "0.6.0-beta.1"