[package]
name = "wordle-game-session-io"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
gmeta.workspace = true
gstd.workspace = true
parity-scale-codec.workspace = true
wordle-game-io.workspace = true
scale-info.workspace = true
