[package]
authors = ["[your_name] <[your_email]>"]
edition = "2021"
name = "erc20"
version = "0.1.0"

[dependencies]
ink = {version = "4.2.0", default-features = false}
scale = {package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"]}
scale-info = {version = "2.6", default-features = false, features = ["derive"], optional = true}
trait_erc20 = {path = "./trait_erc20", default-features = false}

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
e2e-tests = []
ink-as-dependency = []
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
  "trait_erc20/std",
]
