[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet proof of existence for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io"
license = "MIT-0"
name = "pallet-poe"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
  "derive",
]}
frame-benchmarking = {version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
frame-support = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
sp-std = { version = "8.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
scale-info = {version = "2.5.0", default-features = false, features = ["derive"]}

[dev-dependencies]
sp-core = {version = "21.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
sp-io = {version = "23.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
sp-runtime = {version = "24.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
	"sp-std/std",
  "frame-system/std",
  "scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]
